change credit permissions
