# docs/openapi.yaml
@@ -5,40 +5,6 @@ info:
   description: Lotus is an open-core pricing and billing engine. We enable API companies
     to automate and optimize their custom usage-based pricing for any metric.
 paths:
-  /api/batch_create_customers/:
-    post:
-      operationId: api_batch_create_customers_create
-      tags:
-      - api
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/CustomerBatchCreateRequestRequest'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/CustomerBatchCreateRequestRequest'
-          multipart/form-data:
-            schema:
-              $ref: '#/components/schemas/CustomerBatchCreateRequestRequest'
-        required: true
-      security:
-      - knoxTokenAuth: []
-      - OrganizationApiKeyAuth: []
-        TokenAuth: []
-      responses:
-        '201':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/CustomerBatchCreateSuccess'
-          description: ''
-        '400':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/CustomerBatchCreateFailure'
-          description: ''
   /api/credits/:
     get:
       operationId: api_credits_list
@@ -1012,23 +978,6 @@ components:
     BacktestDetail:
       type: object
       properties:
-        status:
-          enum:
-          - running
-          - completed
-          - failed
-          type: string
-        kpis:
-          type: object
-          additionalProperties: {}
-        time_created:
-          type: string
-          format: date-time
-        backtest_results:
-          $ref: '#/components/schemas/AllSubstitutionResults'
-        end_date:
-          type: string
-          format: date
         start_date:
           type: string
           format: date
@@ -1036,11 +985,28 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/BacktestSubstitution'
+        kpis:
+          type: object
+          additionalProperties: {}
+        end_date:
+          type: string
+          format: date
+        backtest_results:
+          $ref: '#/components/schemas/AllSubstitutionResults'
+        backtest_id:
+          type: string
         backtest_name:
           type: string
           maxLength: 100
-        backtest_id:
+        status:
+          enum:
+          - running
+          - completed
+          - failed
           type: string
+        time_created:
+          type: string
+          format: date-time
       required:
       - backtest_id
       - backtest_name
@@ -1504,48 +1470,6 @@ components:
           type: string
           format: date-time
           nullable: true
-    CustomerBatchCreateFailure:
-      type: object
-      properties:
-        success:
-          enum:
-          - none
-          type: string
-        failed_customers:
-          type: object
-          additionalProperties: {}
-      required:
-      - failed_customers
-      - success
-    CustomerBatchCreateRequestRequest:
-      type: object
-      properties:
-        customers:
-          type: array
-          items:
-            $ref: '#/components/schemas/CustomerCreateRequest'
-        behavior_on_existing:
-          enum:
-          - merge
-          - ignore
-          - overwrite
-          type: string
-      required:
-      - behavior_on_existing
-      - customers
-    CustomerBatchCreateSuccess:
-      type: object
-      properties:
-        success:
-          enum:
-          - all
-          - some
-          type: string
-        failed_customers:
-          type: object
-          additionalProperties: {}
-      required:
-      - success
     CustomerCreateRequest:
       type: object
       properties:
@@ -1740,17 +1664,6 @@ components:
     DraftInvoice:
       type: object
       properties:
-        invoice_id:
-          type: string
-        due_date:
-          type: string
-          format: date-time
-          readOnly: true
-          nullable: true
-        end_date:
-          type: string
-          format: date
-          readOnly: true
         line_items:
           type: array
           items:
@@ -1760,10 +1673,6 @@ components:
           type: string
           format: date
           readOnly: true
-        issue_date:
-          type: string
-          format: date-time
-          readOnly: true
         cost_due:
           type: number
           format: double
@@ -1772,8 +1681,23 @@ components:
           exclusiveMaximum: true
           exclusiveMinimum: true
           readOnly: true
+        end_date:
+          type: string
+          format: date
+          readOnly: true
         currency:
           $ref: '#/components/schemas/PricingUnit'
+        issue_date:
+          type: string
+          format: date-time
+          readOnly: true
+        due_date:
+          type: string
+          format: date-time
+          readOnly: true
+          nullable: true
+        invoice_id:
+          type: string
       required:
       - cost_due
       - currency
@@ -2118,16 +2042,20 @@ components:
     InitialPlanVersionRequest:
       type: object
       properties:
-        month_anchor:
-          type: integer
-          maximum: 12
-          minimum: 1
-          writeOnly: true
-          nullable: true
-        day_anchor:
-          type: integer
-          maximum: 31
-          minimum: 1
+        currency_code:
+          type: string
+          minLength: 1
+        transition_to_plan_id:
+          type: string
+          format: uuid
+        usage_billing_frequency:
+          enum:
+          - monthly
+          - quarterly
+          - end_of_period
+          - ''
+          - 
+          type: string
           writeOnly: true
           nullable: true
         flat_rate:
@@ -2148,22 +2076,12 @@ components:
           items:
             $ref: '#/components/schemas/PlanComponentRequest'
           nullable: true
-        usage_billing_frequency:
-          enum:
-          - monthly
-          - quarterly
-          - end_of_period
-          - ''
-          - 
-          type: string
+        day_anchor:
+          type: integer
+          maximum: 31
+          minimum: 1
           writeOnly: true
           nullable: true
-        transition_to_plan_id:
-          type: string
-          format: uuid
-        currency_code:
-          type: string
-          minLength: 1
         price_adjustment:
           $ref: '#/components/schemas/PriceAdjustmentRequest'
         description:
@@ -2174,6 +2092,12 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/FeatureRequest'
+          nullable: true
+        month_anchor:
+          type: integer
+          maximum: 12
+          minimum: 1
+          writeOnly: true
           nullable: true
       required:
       - flat_fee_billing_type
@@ -2486,37 +2410,9 @@ components:
     LightweightInvoice:
       type: object
       properties:
-        external_payment_obj_id:
-          type: string
-          readOnly: true
-          nullable: true
-        invoice_id:
-          type: string
-        external_payment_obj_type:
-          enum:
-          - stripe
-          - 
-          type: string
-          nullable: true
-        due_date:
-          type: string
-          format: date-time
-          readOnly: true
-          nullable: true
-        end_date:
-          type: string
-          format: date
-          readOnly: true
         start_date:
           type: string
           format: date
-          readOnly: true
-        issue_date:
-          type: string
-          format: date-time
-          readOnly: true
-        invoice_number:
-          type: string
           readOnly: true
         cost_due:
           type: number
@@ -2526,16 +2422,44 @@ components:
           exclusiveMaximum: true
           exclusiveMinimum: true
           readOnly: true
+        end_date:
+          type: string
+          format: date
+          readOnly: true
+        external_payment_obj_id:
+          type: string
+          readOnly: true
+          nullable: true
+        external_payment_obj_type:
+          enum:
+          - stripe
+          - 
+          type: string
+          nullable: true
+        currency:
+          $ref: '#/components/schemas/PricingUnit'
+        issue_date:
+          type: string
+          format: date-time
+          readOnly: true
+        due_date:
+          type: string
+          format: date-time
+          readOnly: true
+          nullable: true
+        invoice_id:
+          type: string
+        seller:
+          $ref: '#/components/schemas/Seller'
+        invoice_number:
+          type: string
+          readOnly: true
         payment_status:
           enum:
           - paid
           - unpaid
           type: string
           readOnly: true
-        currency:
-          $ref: '#/components/schemas/PricingUnit'
-        seller:
-          $ref: '#/components/schemas/Seller'
       required:
       - cost_due
       - currency
@@ -2552,23 +2476,33 @@ components:
     LightweightInvoiceLineItem:
       type: object
       properties:
-        plan:
-          allOf:
-          - $ref: '#/components/schemas/LightweightPlanVersion'
-          nullable: true
-          readOnly: true
+        start_date:
+          type: string
+          format: date-time
+        name:
+          type: string
+          maxLength: 100
         subscription_filters:
           type: array
           items:
             $ref: '#/components/schemas/SubscriptionCategoricalFilter'
           nullable: true
           readOnly: true
-        name:
-          type: string
-          maxLength: 100
         end_date:
           type: string
           format: date-time
+        billing_type:
+          enum:
+          - in_arrears
+          - in_advance
+          - 
+          type: string
+          nullable: true
+        plan:
+          allOf:
+          - $ref: '#/components/schemas/LightweightPlanVersion'
+          nullable: true
+          readOnly: true
         subtotal:
           type: number
           format: double
@@ -2576,22 +2510,12 @@ components:
           minimum: -10000000000
           exclusiveMaximum: true
           exclusiveMinimum: true
-        start_date:
-          type: string
-          format: date-time
         quantity:
           type: number
           format: double
           maximum: 10000000000
           minimum: 0
           exclusiveMaximum: true
-          nullable: true
-        billing_type:
-          enum:
-          - in_arrears
-          - in_advance
-          - 
-          type: string
           nullable: true
       required:
       - billing_type
@@ -2655,18 +2579,14 @@ components:
     LightweightSubscriptionRecordRequest:
       type: object
       properties:
-        billing_plan:
-          $ref: '#/components/schemas/LightweightPlanVersionRequest'
-        end_date:
+        start_date:
           type: string
           format: date-time
           description: The time the subscription starts. This will be a string in
             yyyy-mm-dd HH:mm:ss format in UTC time.
-        is_new:
-          type: boolean
-          description: Whether this subscription came from a renewal or from a first-time.
-            Defaults to true on creation.
-        start_date:
+        billing_plan:
+          $ref: '#/components/schemas/LightweightPlanVersionRequest'
+        end_date:
           type: string
           format: date-time
           description: The time the subscription starts. This will be a string in
@@ -2678,6 +2598,10 @@ components:
           type: boolean
           description: Whether the subscription automatically renews. Defaults to
             true.
+        is_new:
+          type: boolean
+          description: Whether this subscription came from a renewal or from a first-time.
+            Defaults to true on creation.
       required:
       - auto_renew
       - billing_plan
